comment out old blog posts

--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -8,7 +8,7 @@
 						</div>
 				</div>
 			</div>
-			<div class="row">
+<!-- 			<div class="row">
 				<div ng-controller="ReleaseNotesController as releaseNotes">
 					<div class="content">
 						<div ng-repeat="post in release_notes" ng-class-odd="'col-md-6'" ng-class-even="'row'">
@@ -17,7 +17,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div>
