--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="col-md-12">
 						<div class="content">
-							<a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn">open[Fn]</a>
+							<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn">open[Fn]</a>
 						</div>
 				</div>
 			</div>
