--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -18,6 +18,13 @@
 					</div>
 				</div>
 			</div> -->
+			<div class="row">
+				<div class="col-md-12">
+					<div class="rn-content">
+						*As part of an ongoing effort to practice what we preach, we're using another technology for the blog and simply embedding our <a href="https://medium.com/@openFn/" target="_blank"><i class="fa fa-medium fa-lg"></i> profile</a>, saving time and money. You should see our three latest posts above, and you can access all of our old content (including the original "release notes" section) by clicking "open[Fn] content" above. Hooray for integration.
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
