simple message on content page

--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="col-md-12">
 						<div class="content">
-							<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn">open[Fn]</a>
+							<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn">open[Fn] content</a>
 						</div>
 				</div>
 			</div>
@@ -21,7 +21,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="rn-content">
-						*As part of an ongoing effort to practice what we preach, we're using another technology for the blog and simply embedding our <a href="https://medium.com/@openFn/" target="_blank"><i class="fa fa-medium fa-lg"></i> profile</a>, saving time and money. You should see our three latest posts above, and you can access all of our old content (including the original "release notes" section) by clicking "open[Fn] content" above. Hooray for integration.
+						*Click "open[Fn] content" for all of our earlier content, including the original "release notes" section.
 					</div>
 				</div>
 			</div>
