--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -34,6 +34,12 @@
             </label>
           </div>
         </div>
+        <div class="product-list row" ng-if="isLoading">
+          <div class="col-xs-12 center">
+          <br><br><br><br><br>
+            <i class="fa fa-refresh fa-4x fa-spin"></i>
+          </div>
+        </div>
         <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
           <br>
           <div ng-repeat="product in products | filter:filterProducts " class="product-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
