spinner while content loading

--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -3,8 +3,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-						<div class="content">
-							<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn">open[Fn] content</a>
+						<div class="content center">
+							<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn"><i class="fa fa-refresh fa-4x fa-spin"></i><br><br>open[Fn] content loading</a>
 						</div>
 				</div>
 			</div>
