--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -37,7 +37,7 @@
         <div class="product-list row" ng-if="isLoading">
           <div class="col-xs-12 center">
           <br><br><br><br><br>
-            <i class="fa fa-refresh fa-4x fa-spin"></i>
+            <i class="fa fa-spinner fa-3x fa-pulse"></i>
           </div>
         </div>
         <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
