--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="col-md-12">
 						<div class="content center">
-							<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn"><i class="fa fa-refresh fa-4x fa-spin"></i><br><br>open[Fn] content loading</a>
+							<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-collapsed="false" data-width="100%" href="https://medium.com/@openFn"><i class="fa fa-spinner fa-3x fa-pulse"></i></a>
 						</div>
 				</div>
 			</div>
@@ -21,7 +21,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="rn-content">
-						*Click "open[Fn] content" for all of our earlier content, including the original "release notes" section.
+						*Earlier content (including the "release notes" section) is available by clicking on "open[Fn] content" above.
 					</div>
 				</div>
 			</div>
