product show and edit link

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -115,7 +115,7 @@
               <div class="featurette dark">
                 <div class="modal-header">
                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                   <h4 class="modal-title" id="myModalLabel">Add a product...</h4>
+                   <h4 class="modal-title" id="myModalLabel">Submit a new technology.</h4>
                 </div>
                 <div class="modal-body add-modal">          
 
@@ -141,7 +141,7 @@
 <div class="fsPage" id="fsPage1874808-1">
 <div class="fsSection fs1Col">
 <div id="fsRow1874808-1" class="fsRow fsFieldRow fsLastRow">
-<div class="fsRowBody fsCell fsFieldCell fsFirst fsLast fsLabelVertical fsSpan100" id="fsCell28733099" lang="en">
+<div class="fsRowBody fsCell fsFieldCell fsFirst fsLast fsLabelVertical fsSpan100 hidden" id="fsCell28733099" lang="en">
 <h1>Submit a new technology.</h1>
 </div>
 </div>
